Fixed overflow bug

--- a/#src/scss/core/template-parts.scss
+++ b/#src/scss/core/template-parts.scss
@@ -25,6 +25,14 @@ h1{
 h2{
     font-size: 4.5rem;
     text-align: center;
+
+    @include mq('tablet-wide') {
+        font-size: 3.5rem;
+    }
+
+    @include mq('phone-wide') {
+        font-size: 2.25rem;
+    }
 }
 h3{
     font-size:2.5rem;
@@ -119,6 +127,7 @@ h5{
 .sub-title{
     font-size: 2rem;
     @extend %monst-alter-light;
+    line-height: 1.3;
     &.e--line {
         position: relative;
         &::before {
@@ -137,6 +146,19 @@ h5{
         &::before {
             background-color: $def-blue;
         }
+    }
+
+    @include mq('tablet-wide') {
+        font-size: 1.5rem;
+        &.e--line {
+            position: static; 
+            &::before {
+                display: none;
+            }
+        }
+    }
+    @include mq('phone-wide') {
+        font-size: 1.25rem;
     }
 }
 .sub-description{
@@ -157,3 +179,6 @@ img {
     height: auto;
 }
 
+.overflow-hidden {
+    overflow: hidden;
+}
